deploy/cc/arango-ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arango-cluster-ingress
spec:
  rules:
    - host: "arg.129.114.109.85.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arango-cluster
                port:
                  number: 8529
