deploy/cc/oprc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oaas-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: "pm.oaas.129.114.109.85.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: package-manager
                port:
                  number: 80
    - host: "oaas.129.114.109.85.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gateway
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoker-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - host: "inv.oaas.129.114.109.85.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: invoker
                port:
                  number: 80
